# petshop_data

./: README.md  main.py  pyproject.toml
info/history/mascotify/: 2025-01-03.json
info/last/: superpet.json
info/menu/history/MascotaVeloz/: 2025-01-05_11.json
info/menu/history/Mascotify/: 2025-01-04_17.json
info/menu/history/MisterPet/: 2025-01-05_11.json
info/menu/history/Pharmivet/: 2025-01-04_18.json
info/menu/last/: SuperPet.json
info/products/history/MISTERPET/: 2025-01-04_18.json  2025-01-04_19.json
info/products/history/MascotaVeloz/: 2025-01-04_18.json
info/products/last/: MascotaVeloz.json
petshops_scrapper/: __init__.py  get_data.py  utils.py
petshops_scrapper/mascota_veloz/: __init__.py  all_data.py  get_menu.py  product_info.py  products_in_page.py
petshops_scrapper/mascotify/: __init__.py  all_data.py  get_info_page.py  get_menus.py  product_info.py  products_in_page.py
petshops_scrapper/misterpet/: __init__.py  all_data.py  get_info_page.py  get_info_product.py  get_menu.py  product_info.py  products_in_page.py
petshops_scrapper/pharmivet/: __init__.py  all_data.py  get_info_product.py  get_menu.py  product_info.py  products_in_page.py
petshops_scrapper/superpet/: __init__.py  all_data.py  get_info.py  get_menu.py  get_products.py  product_info.py  products_in_page.py  utils.py
raw_data/: 0_products_ref.csv  1_data.xlsx  MISTERPET.xlsx  MascotaVeloz.xlsx  Pharmivet.xlsx  data.xlsx  mascotify.xlsx  superpet.xlsx
raw_data/archive/: MascotaVeloz.xlsx  Mascotify.xlsx  MisterPet.xlsx  PharmiVet.xlsx  SuperPet.xlsx
(+6 files in other folders)
