[tool.poetry]
name = "petshop-data"
version = "0.1.0"
description = ""
authors = ["jhon <fr.jhonk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
bs4 = "^0.0.2"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
